[package]
name = "tolstack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
statrs = "0.15.0"
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "monte_carlo"
harness = false

[profile.release]
lto = true
